fix horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 
 body {
   background-image: url('/public/earth2.jpg');
+  width: 100%;
+  padding: 0;
 }
 
 .App {
@@ -12,20 +14,21 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   width: 98vw;
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 nav {
+  width: 100%;
   margin-top: 5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 3rem;
 }
 
